--- a/app/views/companies/_featured_companies_grid.html.erb
+++ b/app/views/companies/_featured_companies_grid.html.erb
@@ -12,7 +12,7 @@
     <% end %>
   </div>
 
-  <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
+  <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
     <% featured_companies.each do |featured_listing| %>
       <% company = featured_listing.featured_listing_items.first&.featurable %>
       <div class="group relative bg-white rounded-xl shadow-sm hover:shadow-md transition-all duration-300 border border-gray-100 overflow-hidden">
