Add generic list tabs component with dynamic content switching

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -74,4 +74,7 @@
   </div>
 </div>
 
+<%# Second tab system (new) %>
+<%= render "listings/list_tabs", featured_listings: @featured_listings %>
+
 <%# Add Stimulus controller for tab functionality %>
