--- a/app/views/listings/_list_tabs.html.erb
+++ b/app/views/listings/_list_tabs.html.erb
@@ -56,7 +56,13 @@
                 </div>
               </div>
               <div class="flex-1 min-w-0">
-                <h3 class="text-lg font-medium text-gray-900"><%= item.featurable.name %></h3>
+                <% if item.featurable_type == "Company" %>
+                  <h3 class="text-lg font-medium text-gray-900">
+                    <%= link_to item.featurable.name, solution_path(item.featurable), class: "hover:text-blue-600" %>
+                  </h3>
+                <% else %>
+                  <h3 class="text-lg font-medium text-gray-900"><%= item.featurable.name %></h3>
+                <% end %>
                 <% if item.featurable.respond_to?(:description) %>
                   <p class="text-sm text-gray-500"><%= item.featurable.description %></p>
                 <% end %>
