--- a/app/views/admin/shared/_quick_actions.html.erb
+++ b/app/views/admin/shared/_quick_actions.html.erb
@@ -32,6 +32,16 @@
       </div>
     <% end %>
 
+    <!-- Manage Technologies -->
+    <%= link_to technologies_path, class: "p-4 bg-white rounded-lg border border-gray-200 hover:border-blue-500 hover:shadow-lg transition-all" do %>
+      <div class="flex flex-col items-center">
+        <svg class="w-6 h-6 text-purple-600 mb-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
+        </svg>
+        <span class="text-sm font-medium text-gray-700">Manage Technologies</span>
+      </div>
+    <% end %>
+
     <!-- Featured Listings -->
     <%= link_to admin_featured_listings_path, class: "p-4 bg-white rounded-lg border border-gray-200 hover:border-blue-500 hover:shadow-lg transition-all" do %>
       <div class="flex flex-col items-center">
