--- a/app/views/technologies/_featured_technologies_grid.html.erb
+++ b/app/views/technologies/_featured_technologies_grid.html.erb
@@ -48,7 +48,7 @@
           <div class="flex items-center justify-between">
             <div class="flex items-center space-x-2">
               <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">
-                <%= pluralize(technology.respond_to?(:companies_count) ? technology.companies_count : 0, 'company') %>
+                <%= pluralize(technology.companies.count, 'company') %>
               </span>
               <% if technology.respond_to?(:trending?) && technology.trending? %>
                 <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">
