--- a/app/views/admin/shared/_quick_actions.html.erb
+++ b/app/views/admin/shared/_quick_actions.html.erb
@@ -52,6 +52,16 @@
       </div>
     <% end %>
 
+    <!-- Manage Solutions -->
+    <%= link_to admin_solutions_path, class: "p-4 bg-white rounded-lg border border-gray-200 hover:border-blue-500 hover:shadow-lg transition-all" do %>
+      <div class="flex flex-col items-center">
+        <svg class="w-6 h-6 text-teal-600 mb-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 3v2m6-2v2M9 19v2m6-2v2M5 9H3m2 6H3m18-6h-2m2 6h-2M7 19h10a2 2 0 002-2V7a2 2 0 00-2-2H7a2 2 0 00-2 2v10a2 2 0 002 2zM9 9h6v6H9V9z"></path>
+        </svg>
+        <span class="text-sm font-medium text-gray-700">Manage Solutions</span>
+      </div>
+    <% end %>
+
     <!-- Pending Approvals -->
     <%= link_to admin_companies_path(pending: true), class: "p-4 bg-white rounded-lg border border-gray-200 hover:border-blue-500 hover:shadow-lg transition-all" do %>
       <div class="flex flex-col items-center">
